some outlier analysis and edits

--- a/notebooks/andy_preprocessing.ipynb
+++ b/notebooks/andy_preprocessing.ipynb
@@ -23,12 +23,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "24/09/11 13:36:24 WARN Utils: Your hostname, Andy-PC resolves to a loopback address: 127.0.1.1; using 172.18.158.239 instead (on interface eth0)\n",
-      "24/09/11 13:36:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/09/12 18:23:12 WARN Utils: Your hostname, Andy-PC resolves to a loopback address: 127.0.1.1; using 172.18.157.197 instead (on interface eth0)\n",
+      "24/09/12 18:23:12 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/09/11 13:36:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/09/11 13:36:26 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "24/09/12 18:23:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -141,9 +140,22 @@
       "|     Female|\n",
       "|       Male|\n",
       "+-----------+\n",
-      "\n",
-      "Number of unique consumer_id: 499690\n",
-      "Number of counts after preprocessing: 499690\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique consumer_id: 499999\n",
+      "Number of counts after preprocessing: 499999\n",
       "root\n",
       " |-- consumer_name: string (nullable = true)\n",
       " |-- state: string (nullable = true)\n",
@@ -238,7 +250,7 @@
     "    ((F.col(\"postcode\") >= 9000) & (F.col(\"postcode\") <= 9999)) |  \n",
     "    ((F.col(\"postcode\") >= 5000) & (F.col(\"postcode\") <= 5799)) |\n",
     "    ((F.col(\"postcode\") >= 5800) & (F.col(\"postcode\") <= 5999)) |  \n",
-    "    ((F.col(\"postcode\") >= 6000) & (F.col(\"postcode\") <= 6797)) |\n",
+    "    ((F.col(\"postcode\") >= 6000) & (F.col(\"postcode\") <= 6799)) |\n",
     "    ((F.col(\"postcode\") >= 6800) & (F.col(\"postcode\") <= 6999)) |  \n",
     "    ((F.col(\"postcode\") >= 7000) & (F.col(\"postcode\") <= 7799)) |\n",
     "    ((F.col(\"postcode\") >= 7800) & (F.col(\"postcode\") <= 7999)) |  \n",
@@ -575,7 +587,7 @@
     }
    ],
    "source": [
-    "full_transactions.write.mode('overwrite').parquet(\"../data/curated/full_transaction\")"
+    "full_transactions.write.mode('overwrite').parquet(\"../data/curated/full_transactions\")"
    ]
   }
  ],
