fixed pipeline for adding external datasets

--- a/notebooks/consumer_preprocess.ipynb
+++ b/notebooks/consumer_preprocess.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tbl_consumer = spark.read.option(\"header\", True).option(\"delimiter\", \"|\").csv(\".././data/tables/tbl_consumer.csv\")"
+    "(\"header\", True).option(\"delimiter\", \"|\").csv(\".././data/tables/tbl_consumer.cstbl_consumer = spark.read.optionv\")"
    ]
   },
   {
@@ -2162,6 +2162,92 @@
    ],
    "source": [
     "tbl_consumer.write.mode('overwrite').parquet('.././data/curated/tbl_consumer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+-----+--------+------+-----------+\n",
+      "| consumer_name|state|postcode|gender|consumer_id|\n",
+      "+--------------+-----+--------+------+-----------+\n",
+      "|Anthony Powell|   WA|    6798|  Male|    1058206|\n",
+      "+--------------+-----+--------+------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tbl_consumer.filter(F.col('consumer_id') == '1058206').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------+\n",
+      "|user_id|consumer_id|\n",
+      "+-------+-----------+\n",
+      "|      1|    1195503|\n",
+      "|      2|     179208|\n",
+      "|      3|    1194530|\n",
+      "|      4|     154128|\n",
+      "|      5|     712975|\n",
+      "|      6|     407340|\n",
+      "|      7|     511685|\n",
+      "|      8|     448088|\n",
+      "|      9|     650435|\n",
+      "|     10|    1058499|\n",
+      "|     11|     428325|\n",
+      "|     12|    1494640|\n",
+      "|     13|    1146717|\n",
+      "|     14|    1343547|\n",
+      "|     15|    1463076|\n",
+      "|     16|    1356405|\n",
+      "|     17|    1331093|\n",
+      "|     18|      80965|\n",
+      "|     19|    1226530|\n",
+      "|     20|    1390367|\n",
+      "+-------+-----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "consumer_details.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------+\n",
+      "|user_id|consumer_id|\n",
+      "+-------+-----------+\n",
+      "|   1681|     546210|\n",
+      "+-------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "consumer_details.filter(F.col('consumer_id') == '546210').show()"
    ]
   },
   {
