--- a/notebooks/insights.rmd
+++ b/notebooks/insights.rmd
@@ -6,10 +6,20 @@
 >Since Addresses are not real the analysis has been done on the postcodes for consumers 
 > All transactions made over a one and half year period amounting to over 1500000 have been accumulated
 > The consumer fraid and merchant fraud rate for transactions have been noted.
-> Fraud values have been imputed with most fraud rates lying between 10 to 30% a
 
 
->Total sales and revenue for each merchant has been calculated which has revealed a large range for each attribute
+
+>we used fraud probability, revenue, sales, and customer data 
+
+>Total sales and revenue for each merchant has been calculated which has revealed a large range for each attribute with
+the highest values being described as outliers but since we prefer higher numbers those have been kept
+> Location of consumers for all merchants is equally spaced out and does not show a specifc advanatage for either 
+> Fraud values have been imputed with most fraud rates lying between 10 to 30% 
+>Those with very high fraud values > 90% have been removed
+> Upon viewing sales accordning to tags, no tags can be specifcally earmarked as those selling the same supplies with high sales also have low ones 
+>Which leads to fraud, sales and revenue being the best choices 
+
+Choosing Merchants 
 > Since we have over 4000 merchants and require 100 we have selected the highest merchants based on these values 
 
 >For the next 1000 merchants a 
